--- a/scss/_main-page.scss
+++ b/scss/_main-page.scss
@@ -54,6 +54,7 @@ html, body {
     z-index: 2;
     background-color: var(--white);
     padding: 37px 33px 90px 30px;
+    border: 1px solid #DDDDE2;
 }
 
 .mobile-controls {
