--- a/scss/_team-page.scss
+++ b/scss/_team-page.scss
@@ -35,6 +35,7 @@
     .body-team-page .hero__text {
         padding-bottom: 0;
         padding-top: 0;
+        font-size: var(--base-font-size);
     }
 
     @media (max-width:576px) {
