--- a/scss/_portfolio-page.scss
+++ b/scss/_portfolio-page.scss
@@ -71,13 +71,34 @@
     &__link a {
         text-decoration: none;
         color: var(--blue-90);
-        font-size: 22px;
-        line-height: 32px;
+        @extend %H5;
         font-weight: 500;
     }
 
     &__text {
         @extend %TXT-L;
+    }
+}
+
+@media (max-width:1499px) {
+    .portfolio-gallary {
+        justify-content: center;
+    }
+}
+
+@media (max-width:576px) {
+    .portfolio-portfolio {
+        padding-top: 80px;
+        padding-bottom: 16px;
+    }
+
+    .portfolio-gallary {
+        padding-bottom: 64px;
+        gap: 64px;
+    }
+
+    .portfolio-item {
+        align-items: center;
     }
 }
 
@@ -96,4 +117,32 @@
     @extend %TXT-L;
     color: var(--gray-20);
     padding-bottom: 24px;
+}
+
+@media (max-width:576px) {
+    .have-idea {
+        padding-top: 80px;
+        padding-bottom: 64px;
+        background-position: center;
+    }
+
+    .body-portfolio-page .position-col__name {
+        align-self: flex-start;
+    }
+
+    .body-portfolio-page .position-col__title {
+        align-self: flex-start;
+    }
+
+    .body-portfolio-page .position-col__text {
+        align-self: flex-start;
+    }
+
+    .body-portfolio-page .position-col__title {
+        padding-bottom: 16px;
+    }
+
+    .body-portfolio-page .position-col__text {
+        padding-bottom: 40px;
+    }
 }
