--- a/scss/_team-page.scss
+++ b/scss/_team-page.scss
@@ -256,6 +256,7 @@
 
         .position-col__title {
             text-align: center;
+            padding-bottom: 40px;
         }
 
         .position-col__btn {
