add turn off page scroll when menu menu is open

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,10 @@ html, body {
   color: var(--text-color);
 }
 
+body.lock {
+  overflow: hidden;
+}
+
 @media (max-width: 576px) {
   body {
     --base-font-size: 12px;
