add opening the list of the whole team

--- a/css/styles.css
+++ b/css/styles.css
@@ -1697,6 +1697,10 @@ h1 {
   padding-top: 78px;
 }
 
+.teams-row__second.active {
+  display: block;
+}
+
 .teams-row__third {
   padding-top: 78px;
 }
@@ -1711,6 +1715,10 @@ h1 {
   justify-content: center;
   align-items: center;
   padding-top: 50px;
+}
+
+.teams-buttons.hidden {
+  display: none;
 }
 
 .teams-btn {
@@ -1753,6 +1761,7 @@ h1 {
   }
   .teams-row__second {
     display: none;
+    padding-top: 40px;
   }
   .teams-row__third {
     padding-top: 40px;
