--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,5 +21,6 @@ body {
     --base-line-heignt: 22px;
     --font-size-secondary: 20px;
     --line-height-secondary:28px;
+    --font-family-base: "Montserrat", sans-serif;
     --font-family-secondary: 'Inter', sans-serif;
 }
