--- a/css/styles.css
+++ b/css/styles.css
@@ -483,7 +483,7 @@ h1 {
   h1 {
     padding-top: 80px;
     font-size: 36px;
-    font-weight: 350;
+    font-weight: 700;
     line-height: 36px;
     letter-spacing: 0.72px;
   }
@@ -1981,6 +1981,15 @@ h1 {
 .body-contacts-page h1 {
   padding-top: 0;
   font-family: var(--font-family-base);
+}
+
+.body-contacts-page .contact-row {
+  align-items: flex-start;
+  bottom: 180px;
+}
+
+.body-contacts-page .contact-info__text {
+  padding-top: 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
