--- a/scss/_portfolio-page.scss
+++ b/scss/_portfolio-page.scss
@@ -32,6 +32,13 @@
     font-size: var(--base-font-size);
 }
 
+@media (max-width:576px) {
+    .body-portfolio-page .hero__block {
+        padding-top: 80px;
+        padding-bottom: 64px;
+    }
+}
+
 .portfolio-gallary {
     display: flex;
     flex-direction: row;
