add active page menu item highlighting

--- a/scss/_contact-page.scss
+++ b/scss/_contact-page.scss
@@ -16,6 +16,10 @@
     background: none;
 }
 
+.body-contacts-page .header-nav > li:last-child {
+    font-weight: 700;
+}
+
 .body-contacts-page .hero__block {
     padding-top: 110px;
     padding-bottom: 272px;
