--- a/scss/_portfolio-page.scss
+++ b/scss/_portfolio-page.scss
@@ -16,6 +16,10 @@
     background: none;
 }
 
+.body-portfolio-page .header-nav > li:nth-child(9) {
+    font-weight: 700;
+}
+
 .body-portfolio-page .hero__block {
     padding-top: 110px;
     padding-bottom: 166px;
