--- a/scss/_team-page.scss
+++ b/scss/_team-page.scss
@@ -17,6 +17,10 @@
         background: none;
     }
 
+    .body-team-page .header-nav > li:nth-child(3) {
+        font-weight: 700;
+    }
+
     .body-team-page .hero__block {
         padding-top: 110px;
         padding-bottom: 156px;
