--- a/css/styles.css
+++ b/css/styles.css
@@ -343,6 +343,10 @@ nav {
   width: 100%;
 }
 
+.body-main-page .header-nav > li:first-child {
+  font-weight: 700;
+}
+
 .header-controls {
   display: flex;
   flex-direction: row;
@@ -1594,6 +1598,10 @@ h1 {
   background: none;
 }
 
+.body-team-page .header-nav > li:nth-child(3) {
+  font-weight: 700;
+}
+
 .body-team-page .hero__block {
   padding-top: 110px;
   padding-bottom: 156px;
@@ -1841,6 +1849,10 @@ h1 {
   background: none;
 }
 
+.body-portfolio-page .header-nav > li:nth-child(9) {
+  font-weight: 700;
+}
+
 .body-portfolio-page .hero__block {
   padding-top: 110px;
   padding-bottom: 166px;
@@ -1972,6 +1984,10 @@ h1 {
   gap: 10px;
   padding-top: 10px;
   background: none;
+}
+
+.body-contacts-page .header-nav > li:last-child {
+  font-weight: 700;
 }
 
 .body-contacts-page .hero__block {
