fix display the experience block in the mobile version on the main page

--- a/css/styles.css
+++ b/css/styles.css
@@ -504,12 +504,19 @@ h1 {
     padding: 14px 114px 14px 114px;
     border-radius: 8px;
   }
+  .header-block > .hero__experience {
+    display: none;
+  }
   .hero__experience {
     padding-top: 53px;
     padding-bottom: 106px;
     background-color: var(--blue-100);
   }
 }
+.body-main-page .experience {
+  display: none;
+}
+
 .about {
   padding-top: 180px;
   padding-bottom: 180px;
@@ -627,6 +634,13 @@ h1 {
   }
 }
 @media (max-width: 576px) {
+  .body-main-page .experience {
+    display: block;
+  }
+  .body-main-page .experience > .container {
+    padding-left: 0;
+    padding-right: 0;
+  }
   .about {
     padding-bottom: 88px;
   }
