--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,5 +2,6 @@
 @import "_extension";
 @import "_main-page";
 @import "_team-page";
+@import "_career-page";
 @import "_portfolio-page";
 @import "_contact-page";
