--- a/scss/_career-page.scss
+++ b/scss/_career-page.scss
@@ -43,3 +43,114 @@
         padding-bottom: 64px;
     }
 }
+
+.career-vacancies {
+    padding-top: 180px;
+    padding-bottom: 175px;
+}
+
+.vacancies-row {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding-bottom: 36px;
+
+    &__title {
+        @extend %H1-M;
+    }
+
+    &__text {
+        @extend %TXT-L;
+        color: var(--gray-80);
+        max-width: 821px;
+    }
+}
+
+.body-career-page .accordion-tab {
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.body-career-page .accordion-tab__short {
+    gap: 10px;
+}
+
+.body-career-page .accordion-tab__short::after {
+    content: url(../img/accord-open-chevron.svg);
+    transform: rotate(-90deg);
+    @extend %transition;
+}
+
+.body-career-page .accordion-tab--open .accordion-tab__short::after {
+    transform: rotate(0deg);
+}
+
+.full-content {
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: flex-start;
+}
+
+
+.full-row {
+
+    &__title {
+        @extend %H6;
+        color: var(--blue-90);
+    }
+
+    &__skills {
+        padding-top: 10px;
+        display: inline-flex;
+        gap: 10px;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    &__text {
+        padding-top: 10px;
+    }
+
+    &__social {
+        align-items: center;
+        display: flex;
+        justify-content: flex-start;
+        gap: 24px;
+        padding-left: 3px;
+    }
+}
+
+.skills-item {
+    padding: 12px 14px 12px 14px;
+    background-color: var(--bg-secondary-color);
+    border-radius: 4px;
+}
+
+.text-list {
+    padding-bottom: 10px;
+    color: var(--gray-80);
+}
+
+.text-list:last-child {
+    padding-bottom: 0;
+}
+
+.text-list::before {
+    content: url(../img/ellipse-blue.svg);
+    position: relative;
+    bottom: 4px;
+    padding-right: 15px;
+}
+
+.social-item img {
+    aspect-ratio: auto 32 / 32;
+    width: 100%;
+    height: auto;
+    @extend %transition;
+}
+
+.social-item img:hover {
+    transform: scale(115%);
+}
